--- a/vite-vue/index.html
+++ b/vite-vue/index.html
@@ -5,6 +5,8 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vite + Vue</title>
+  <!--    font awesome   -->
+  <script src="https://kit.fontawesome.com/a9691f13de.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <div id="app"></div>
